Fixed published date too long copy

--- a/app/assets/stylesheets/editor-3/header.css.scss
+++ b/app/assets/stylesheets/editor-3/header.css.scss
@@ -102,3 +102,9 @@
     color: $cWhite;
   }
 }
+.Editor-HeaderInfo-publishDate {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 160px;
+}
